--- a/web_app/templates/plan_schedule.html
+++ b/web_app/templates/plan_schedule.html
@@ -8,14 +8,18 @@
       <div>
         <a class="btn btn-outline-secondary me-2" href="{{ url_for('events_bp.events_list') }}">Zurück</a>
         <div class="btn-group me-2" role="group">
-          <a class="btn btn-outline-primary" href="{{ url_for('print_bp.print_schedule', event_id=event.id) }}" target="_blank">Vorbereitungsdrucksachen</a>
+          <a class="btn btn-outline-primary" href="{{ url_for('print_bp.print_index', event_id=event.id) }}" target="_blank">Vorbereitungsdrucksachen</a>
           <button class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
             <span class="visually-hidden">Weitere Drucke</span>
           </button>
           <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="{{ url_for('print_bp.print_startlists', event_id=event.id) }}" target="_blank">Startlisten</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('print_bp.print_startlists_by_schedule', event_id=event.id) }}" target="_blank">Startlisten (nach Zeitplan)</a></li>
             <li><a class="dropdown-item" href="{{ url_for('print_bp.print_stewardlists', event_id=event.id) }}" target="_blank">Ringschreiberlisten</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('print_bp.print_stewardlists_by_schedule', event_id=event.id) }}" target="_blank">Ringschreiberlisten (nach Zeitplan)</a></li>
             <li><a class="dropdown-item" href="{{ url_for('print_bp.print_master_steward_list', event_id=event.id) }}" target="_blank">Einweiserlisten</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('print_bp.print_master_steward_list_by_schedule', event_id=event.id) }}" target="_blank">Einweiserliste (nach Zeitplan)</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('print_bp.print_schedule', event_id=event.id) }}" target="_blank">Zeitplan</a></li>
           </ul>
         </div>
         <button class="btn btn-primary" form="form-save-schedule">Zeitplan speichern</button>
