--- a/web_app/templates/layout.html
+++ b/web_app/templates/layout.html
@@ -72,7 +72,7 @@
 
     {% if not kiosk_mode %}
     <footer class="container text-center text-muted mt-5 mb-3 no-print">
-        <p>&copy; 2025 Agility Software Projekt</p>
+        <p>&copy; {{ current_year }} Agility Software Projekt</p>
     </footer>
     {% endif %}
 
